fixing some alignments

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -113,7 +113,7 @@ debug, info, success, warning, error */
   .search-btn,
   .form-control,
   .form-select {
-    background-color: rgba(33, 37, 41, 0.3);
+    background-color: rgba(33, 37, 41, 1);
     &:hover {
       color: rgba(255, 255, 255, 1);
     }
@@ -126,7 +126,7 @@ debug, info, success, warning, error */
 
     .dropdown-item {
       &:active {
-        background-color: rgba(33, 37, 41, 0.3);
+        background-color: rgba(33, 37, 41, 1);
       }
     }
   }
@@ -174,16 +174,6 @@ debug, info, success, warning, error */
 
   .nav-link:not(.active) {
     color: hsl(0, 0%, 75%);
-
-    &::before {
-      content: "";
-      position: absolute;
-      left: 0.25rem;
-      top: 25%;
-      height: 50%;
-      width: 2px;
-      background-color: transparent;
-    }
 
     &:hover {
       color: white;
@@ -350,8 +340,8 @@ debug, info, success, warning, error */
   background-position: center 25%;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 400px;
-  box-shadow: inset 0 -400px 100px -50px rgba(0, 0, 0, 0.801); /* Bottom shadow fading up */
+  height: 450px;
+  box-shadow: inset 0 -450px 100px -10px rgba(0, 0, 0, 0.801); /* Bottom shadow fading up */
   margin-top: calc(-1 * var(--navbar-height));
 }
 
@@ -361,24 +351,24 @@ debug, info, success, warning, error */
 }
 
 .banner-content {
-  margin-top: -280px;
+  margin-top: -300px;
 
   @media screen and (width < 768px) {
-    margin-top: -220px;
+    margin-top: -240px;
   }
 
   .poster {
     border-radius: 5px;
-    width: 12rem;
-    aspect-ratio: 2/3;
+    width: 14rem;
+    aspect-ratio: 3/4;
     object-fit: cover;
   }
 
   .image-not-found {
     border-radius: 5px;
-    width: 12rem;
+    width: 14rem;
     object-fit: contain;
-    aspect-ratio: 2/3;
+    aspect-ratio: 3/4;
     background-color: var(--bg-img-none);
   }
 
@@ -387,6 +377,7 @@ debug, info, success, warning, error */
   }
 
   .title {
+    color: white;
     font-size: 2.25rem;
     font-weight: 700;
     /* show only 2 line of text */
@@ -422,7 +413,7 @@ debug, info, success, warning, error */
 }
 
 .details-column {
-  width: 12rem; /* need for smaller screens */
+  width: 14rem; /* need for smaller screens */
   background-color: var(--bg-foreground);
 
   @media screen and (width <= 991px) {
